<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libbno055_linux</name>
  <version>1.7.1</version>
  <description>C++17 driver and ROS 2 nodes for the Bosch BNO055 9-axis IMU on Linux, with Python, C, and Rust bindings.</description>
  <maintainer email="lazytatzv@users.noreply.github.com">lazytatzv</maintainer>
  <license file="LICENSE">MIT</license>
  <url type="website">https://github.com/lazytatzv/libbno055-linux</url>
  <url type="bugtracker">https://github.com/lazytatzv/libbno055-linux/issues</url>
  <url type="repository">https://github.com/lazytatzv/libbno055-linux</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>std_srvs</depend>
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
